# ABEngine

./: .gitignore  ABEngine.sln  CMakeLists.txt
Engine/: ABEngine.vcxproj  CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Input.cpp  Input.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  glad.c
Engine/include/glad/: glad.h
Engine/private/: Input.cpp  Utils.cpp  Vector3.cpp
Engine/private/Renderer/: ElementBuffer.cpp  RenderObject.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
Engine/public/: Input.h  Macros.h  Utils.h  Vector3.h
Engine/public/Renderer/: ElementBuffer.h  RenderObject.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  Window.h
Engine/shaders/: Fragment.frag  Vertex.vert  Vertex.vs
Renderer/: App.cpp  App.h  CMakeLists.txt  Macros.h  Makefile  PolygonObject.cpp  PolygonObject.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Renderer.vcxproj  Renderer.vcxproj.filters  Shader.cpp  Shader.h  glad.cpp
Renderer/include/glad/: glad.h
RendererTestApp/: CMakeLists.txt  Makefile  main.cpp
Testing/: Testing.vcxproj  main.cpp
